--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/firestore": "^7.1.0",
+    "firebase": "^10.5.0",
     "firebase-admin": "^11.11.0",
+    "firestore": "^1.1.6",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
