--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --list-different '{app,public}/**/*.{js,ts,tsx,md,html,json}' --write"
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.1.0",
-    "firebase": "^10.5.0",
     "firebase-admin": "^11.11.0",
-    "firestore": "^1.1.6",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
@@ -20,6 +19,7 @@
   "devDependencies": {
     "autoprefixer": "^10",
     "postcss": "^8",
+    "prettier": "^3.0.3",
     "tailwindcss": "^3"
   }
 }
