--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.1.0",
+    "@passageidentity/passage-elements": "^1.15.0",
     "firebase-admin": "^11.11.0",
     "next": "13.5.4",
     "react": "^18",
