--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.1.0",
+    "@hookform/resolvers": "^3.3.2",
     "@passageidentity/passage-elements": "^1.15.0",
     "firebase-admin": "^11.11.0",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
