firebase on frontend

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@passageidentity/passage-elements": "^1.15.0",
     "@passageidentity/passage-node": "^2.6.0",
+    "firebase": "^10.5.0",
     "firebase-admin": "^11.11.0",
     "next": "13.5.4",
     "react": "^18",
